[gd_scene load_steps=4 format=3 uid="uid://dvqq1banvf1yw"]

[ext_resource type="Script" path="res://scripts/ui/lobby_interface.gd" id="1_452rt"]
[ext_resource type="PackedScene" uid="uid://cpat3jp6fu4q2" path="res://scenes/ui/chat_component.tscn" id="2_hg86q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t48f8"]
bg_color = Color(0.239216, 0.239216, 0.239216, 1)

[node name="PanelContainer" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_t48f8")
script = ExtResource("1_452rt")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer1" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="LeaveButton" type="Button" parent="VBoxContainer/HBoxContainer1"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "Leave"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
follow_focus = true

[node name="ChatLabel" type="Label" parent="VBoxContainer/HBoxContainer2/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="PlayersLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 1
horizontal_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="WriteMsgBox" type="TextEdit" parent="VBoxContainer/HBoxContainer3"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
caret_blink = true
caret_multiple = false

[node name="ChatComponent" parent="." node_paths=PackedStringArray("chat_text_edit", "chat_label", "scroll_container") instance=ExtResource("2_hg86q")]
chat_text_edit = NodePath("../VBoxContainer/HBoxContainer3/WriteMsgBox")
chat_label = NodePath("../VBoxContainer/HBoxContainer2/ScrollContainer/ChatLabel")
scroll_container = NodePath("../VBoxContainer/HBoxContainer2/ScrollContainer")

[connection signal="pressed" from="VBoxContainer/HBoxContainer1/LeaveButton" to="." method="_on_leave_button_pressed"]
